UI cleanup: removed icons, adjusted whitespace, made first choice in select box a call to action, stripped password from Git Fusion URL being displayed, ensured we catch config errors and just report that the feature is disabled rather than giving an error, and added the 'input' event listener so that cached values in the import URL field also cause the Git Fusion import UI to be disabled.

--- a/perforce_swarm/app/assets/stylesheets/perforce_swarm/projects.scss
+++ b/perforce_swarm/app/assets/stylesheets/perforce_swarm/projects.scss
@@ -2,13 +2,11 @@
   border-top: 1px solid #ccc;
   color: #999;
   text-align: center;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-top: 25px;
 }
 
 .project-edit-content hr.or:after {
   content: "OR";
-  display: inline-block;
   position: relative;
   top: -0.7em;
   font-size: 1.2em;
@@ -16,20 +14,8 @@
   background: white;
 }
 
-.project-edit-content .project-import img {
-  width: 40%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.project-edit-content .form-group {
-  position: relative;
-}
-.project-edit-content .centered-buttons {
-  position: absolute;
-  top: 40%;
-  right: 0;
+.git-fusion-import.form-group {
+  margin-bottom: 0;
 }
 
 .form-group.disabled {
@@ -43,7 +29,7 @@
 
 .split .left {
   float: left;
-  width: 45%;
+  width: 50%;
 }
 
 .split .right {
